--- a/src/custom.css
+++ b/src/custom.css
@@ -5,7 +5,7 @@
     @apply transition-all duration-200 ease-in-out;
   }
   .navbar-link {
-    @apply px-4 py-2 text-dsg rounded-md text-white hover:bg-lb-300 
+    @apply px-4 py-2 text-white rounded-md  hover:bg-lb-300 
     text-lg font-medium;
   }
 
