--- a/src/custom.css
+++ b/src/custom.css
@@ -5,7 +5,7 @@
     @apply transition-all duration-200 ease-in-out;
   }
   .navbar-link {
-    @apply px-4 py-2 text-white rounded-md  hover:bg-lb-300 
+    @apply px-4 py-2 text-white rounded-full hover:bg-lb-500 
     text-lg font-medium;
   }
 
@@ -27,6 +27,18 @@
 
   .zoomin-md {
     @apply hover:scale-125;
+  }
+
+  .mp3 {
+    @apply m-3 p-3;
+  }
+
+  .nudgeup {
+    @apply hover:-translate-y-2;
+  }
+
+  .fadein80 {
+    @apply opacity-80 hover:opacity-100;
   }
 }
 
