--- a/src/custom.css
+++ b/src/custom.css
@@ -6,7 +6,7 @@
   }
   .navbar-link {
     @apply px-4 py-2 text-white rounded-full hover:bg-lb-500 
-    text-lg font-medium;
+    font-medium;
   }
 
   .glass-slate {
