--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,6 @@
     @apply bg-background text-foreground;
   }
   html {
-    @apply w-full overflow-x-hidden scroll-smooth;
+    @apply w-full overflow-x-hidden;
   }
 }
