restyle phone view nv bar

--- a/src/custom.css
+++ b/src/custom.css
@@ -9,7 +9,7 @@
     @apply transition-all duration-200 ease-in-out;
   }
   .navbar-link {
-    @apply px-4 py-2 text-white rounded-full hover:bg-lb-500 
+    @apply px-4 py-2 text-white rounded-lg  hover:bg-lb-500  
     font-medium;
   }
 
