--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   .t200e {
     @apply transition-all duration-200 ease-in-out;
   }
+
+  .t500e {
+    @apply transition-all duration-500 ease-in-out;
+  }
   .navbar-link {
     @apply px-4 py-2 text-white rounded-lg  hover:bg-lb-500  
     font-medium;
