--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,17 @@
   --drop-shadow-3xl: 0 35px 35px rgba(0, 0, 0, 0.35);
   --drop-shadow-4xl: 0 45px 65px rgba(0, 0, 0, 0.45);
 
+  --bg-dotted-dark: radial-gradient(
+      color-mix(in oklch, var(--primary) 50%, transparent) 1%,
+      transparent 1px
+    )
+    0 0 / 20px 20px;
+  --bg-dotted-light: radial-gradient(
+      color-mix(in oklch, var(--primary) 25%, transparent) 5%,
+      transparent 1px
+    )
+    0 0 / 20px 20px;
+
   --animate-fade-in: fadeIn 0.5s ease-in-out forwards;
 
   @keyframes fadeIn {
